--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,8 @@ body {
   background-color: var(--color-primary);
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
+  max-width: 1536px;
+  max-height: 960px;
 }
 
 .container {
@@ -37,7 +36,7 @@ body {
   font-weight: 700;
   text-transform: capitalize;
   width: 67%;
-  font-size: 9em;
+  font-size: clamp(9rem, 0.7861rem + 8.5561vw, 6rem);
   line-height: 0.9;
   margin-block-start: 2rem;
   margin-block-end: 2rem;
@@ -105,9 +104,8 @@ body {
 
 .img .avatar1 {
   position: absolute;
-  top: 45%;
-  left: 72.5%;
-  z-index: -2;
+  top: 35.5vh;
+  left: 72.3vw;
 }
 
 .img .avatar2 {
@@ -141,4 +139,64 @@ body {
   top: 49%;
   left: 46%;
   z-index: 1;
+}
+
+/* breakpoint responsive */
+@media screen and (min-width: 48em) and (max-width: 61em) {
+  .container {
+    padding-inline: 3rem;
+    padding-block-start: 3rem;
+  }
+
+  .text {
+    margin-block-start: 15rem;
+  }
+
+  .text-big :is(#t1, #t2) {
+    font-size: 6.5rem;
+  }
+
+  .text-small {
+    font-size: 1.7rem;
+    width: 75%;
+  }
+
+  .text button {
+    width: 30vw;
+  }
+
+  .logo {
+    margin-block-start: 17rem;
+  }
+
+  .img .avatar1 {
+    top: 30%;
+    left: 80%;
+  }
+
+  .img .avatar2 {
+    top: 7%;
+  }
+
+  .img .avatar3 {
+    top: 10%;
+    left: 7%;
+  }
+
+  .img .avatar4 {
+    left: 50%;
+  }
+
+  .img .avatar5 {
+    top: 24%;
+    left: 65%;
+  }
+
+  .img .avatar6 {
+    top: 46%;
+    left: 68%;
+  }
+}
+@media screen and (min-width: 22.5em) and (max-width: 47em) {
+  /* mobile */
 }
